# open-gfx-board

./: .gitignore  Icon.af  PROJECT.md  README.md  migration.html  open-gfx-board-flask-native-rust-backend-migration.md  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
.github/scripts/: generate_latest_json.py
.github/workflows/: build-release.yml
src/: app.html  hooks.client.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/football/: plugin.json
src-tauri/plugins/football/assets/: control.js  editor.js
src-tauri/plugins/football/templates/: card-popup.html  goal-popup.html  lineup.html  scoreboard.html  sub-popup.html
src-tauri/src/: html_template.rs  keyboard.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: advertisements.rs  mod.rs  popups.rs  programs.rs  schema.rs  screens.rs  studios.rs
src-tauri/src/models/: mod.rs
src-tauri/src/plugins/: db_ops.rs  manager.rs  manifest.rs  mod.rs  sdk_injection.rs  state.rs
src-tauri/src/server/: mod.rs  socket_handlers.rs
src-tauri/src/server/routes/: advertisements.rs  mod.rs  plugins.rs  popups.rs  programs.rs  screens.rs  studios.rs  system.rs
src/lib/: bridge.ts  confirm.ts  programPlugins.ts  toasts.ts  types.ts
src/lib/api/: api.ts  plugins.ts  socket.ts
src/lib/components/: AdLauncher.svelte  Cmd-Panel-Btn.svelte  Cmd-Panel.svelte  ConfirmModal.svelte  (+13 more)
src/routes/: +layout.svelte  +page.svelte
static/: splashscreen.html
test-content/: test-popup.html  test-screen.html
(+18 files in other folders)
